# llm-orchestration

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.backend  README.md  ai-agents-deep-dive.md  docker-compose.yml  pyproject.toml  start.sh
.claude/: launch.json
backend/: config.py  main.py
backend/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py
backend/api/: agents.py  chat.py  conversations.py  memory.py
backend/db/: database.py  models.py
backend/memory/: episodic.py  vector_store.py
backend/orchestration/: agent.py  context_manager.py  multi_agent.py
backend/tools/: __init__.py  code_executor.py  file_system.py  http_client.py  registry.py  utility.py  web_search.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AgentTrace.tsx  Chat.tsx  MessageBubble.tsx  ModelSelector.tsx  MultiAgentPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useConversations.ts
