[project]
name = "llm-orchestration"
version = "0.1.0"
description = "Personal LLM orchestration platform with multi-model routing and agent loop"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.3",
    "httpx>=0.27.0",
    "chromadb>=0.5.20",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.3",
    "aiofiles>=24.1.0",
    "tavily-python>=0.5.0",
    "playwright>=1.48.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
